Add NativePlayer with audio/video tags

--- a/src/html/index-template.html
+++ b/src/html/index-template.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-    <div id="player-container">
-        <h1>Dhara Player</h1>
+    <h1>Dhara Player</h1>
+    <div id="player-container" style="width: 640px; height: 360px;">
     </div>
 
     <script>
