--- a/src/html/index-template.html
+++ b/src/html/index-template.html
@@ -17,8 +17,8 @@
     <script>
         const playerContainer = document.getElementById('player-container');
         const player = new window.DHARA.Player(playerContainer);
-        player.setSource(new URL('https://livesim2.dashif.org/vod/testpic_2s/audio.mpd'));
-        // player.setSource(new URL('https://dash.akamaized.net/dash264/TestCases/5a/nomor/1.mpd'));
+        // player.setSource(new URL('https://livesim2.dashif.org/vod/testpic_2s/audio.mpd'));
+        player.setSource(new URL('https://dash.akamaized.net/dash264/TestCases/5a/nomor/1.mpd'));
     </script>
 </body>
 
