--- a/demo/index-template.html
+++ b/demo/index-template.html
@@ -7,7 +7,7 @@
     <title>
         <%= htmlWebpackPlugin.options.title %>
     </title>
-    <link rel="stylesheet" href="css/dhara-player.css" type="text/css">
+    <link rel="stylesheet" href="css/styles.css" type="text/css">
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
 </head>
 
