--- a/demo/index-template.html
+++ b/demo/index-template.html
@@ -24,7 +24,7 @@
                             <div class="ml-10 flex items-baseline space-x-4">
                                 <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-white/5 hover:text-white" -->
                                 <a href="#" aria-current="page"
-                                    class="rounded-md bg-gray-900 px-3 py-2 text-lg font-medium text-white">
+                                    class="rounded-md px-3 py-2 text-lg font-medium text-white">
                                     Dhaara Player
                                 </a>
                                 <a href="https://github.com/dsoma/dhara-player"
@@ -64,20 +64,24 @@
             </el-disclosure>
         </nav>
 
-        <main>
+        <main class="bg-gray-300 min-h-screen">
             <div class="mx-auto max-w-7xl px-4 py-6 sm:px-6 lg:px-8">
-                <div id="player-container" class="flex rounded-md"></div>
+                <div id="player-container" class="flex rounded-lg shadow-2xl w-full max-w-screen-lg"
+                    style="aspect-ratio: 16/9;"></div>
 
-                <div class="mt-6 grid grid-cols-4 gap-4">
-                    <button type="button" onclick="window.PlayerDemo.selectSample('single-period')"
-                        class="rounded-md bg-indigo-700 px-4 py-2 text-sm font-medium text-white hover:bg-indigo-500 focus:outline-none focus:ring-2 focus:ring-indigo-400">
-                        Single Period</button>
-                    <button type="button" onclick="window.PlayerDemo.selectSample('multi-period')"
-                        class="rounded-md bg-indigo-700 px-4 py-2 text-sm font-medium text-white hover:bg-indigo-500 focus:outline-none focus:ring-2 focus:ring-indigo-400">
-                        Multi Period</button>
-                    <button type="button" onclick="window.PlayerDemo.selectSample('audio-only')"
-                        class="rounded-md bg-indigo-700 px-4 py-2 text-sm font-medium text-white hover:bg-indigo-500 focus:outline-none focus:ring-2 focus:ring-indigo-400">Audio
-                        Only</button>
+                <div class="mt-6">
+                    <h2 class="text-xl font-semibold text-gray-900 mb-4">Samples</h2>
+                    <div class="grid grid-cols-4 gap-4">
+                        <button type="button" onclick="window.PlayerDemo.selectSample('single-period')"
+                            class="rounded-md bg-gray-900 px-4 py-2 text-sm font-medium text-white hover:bg-gray-500 focus:outline-none focus:ring-2 focus:ring-gray-400">
+                            Single Period</button>
+                        <button type="button" onclick="window.PlayerDemo.selectSample('multi-period')"
+                            class="rounded-md bg-gray-900 px-4 py-2 text-sm font-medium text-white hover:bg-gray-500 focus:outline-none focus:ring-2 focus:ring-gray-400">
+                            Multi Period</button>
+                        <button type="button" onclick="window.PlayerDemo.selectSample('audio-only')"
+                            class="rounded-md bg-gray-900 px-4 py-2 text-sm font-medium text-white hover:bg-gray-500 focus:outline-none focus:ring-2 focus:ring-gray-400">Audio
+                            Only</button>
+                    </div>
                 </div>
             </div>
         </main>
